# COMP4801

./: .gitignore  CLAUDE.md  README.md  demo_reads.npz  pyproject.toml  requirements.txt
COMP4801_Phasing_Benchmark_Platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
algorithms/: __init__.py  diploid_em_cluster.py  polyploid_em_cluster.py  read_tsv.py
algorithms/cli/: __init__.py  convert.py  phase.py
algorithms/diploid/: __init__.py  diploid_mst_phase.py  em.py  em_cluster.py  mst.py  mst_phase.py  whatshap_adapter.py  whatshap_driver.py
algorithms/eval/: __init__.py  metrics.py
algorithms/io/: __init__.py  parser.py  read_tsv.py  reads_data.py  writer.py
algorithms/polyploid/: __init__.py  em.py  em_cluster.py  phase_io.py  polyploid_spectral_cluster.py  spectral.py  spectral_cluster.py
benchmark/: __init__.py  accuracy.py  benchmark_runner.py
dataset/: long_read_readset_simulator.py  simulate.py
dataset/0 - diploid only/: demo.haplotypes.tsv  demo.reads.tsv  demo.summary.json  simulate_phasing_data.py
dataset/1/: sim.haplotypes.npz  sim.haplotypes.tsv  sim.reads.sparse.tsv  sim.summary.json  simulate_phasing_data.py
docs/: algorithms.md  cli.md  dataset.md  io.md  scripts.md
scripts/: benchmark_all.sh  run_pipeline.sh  simulate.sh
tests/: test_data_simulation_io.py  test_diploid_algorithms.py  test_diploid_whatshap.py  test_pipeline_integration.py  test_pipeline_whatshap_cli.py  test_polyploid_algorithms.py  test_simulation_whatshap_compat.py  test_vcf_mode_pipeline.py  test_whatshap_adapter.py
