[project]
name = "COMP4801-Phasing-Benchmark-Platform"
version = "0.1.0"
description = "A benchmark suite for evaluating haplotype phasing algorithms"
authors = [
  { name="Ng Ching Lap", email="ngcl1013@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
  "numpy >=1.23",
  "scipy >=1.10",
  "scikit-learn >=1.2",
  "networkx >=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
simulate = "dataset.simulate:main"
phase = "algorithms.cli.phase:main"
convert = "algorithms.cli.convert:main"
benchmark = "benchmarking.benchmark_runner:main"
accuracy = "benchmarking.benchmark_accuracy:main"

[tool.setuptools]
packages = [
    "algorithms",
    "algorithms.cli",
    "algorithms.diploid",
    "algorithms.polyploid",
    "algorithms.io",
    "algorithms.eval",
    "dataset",
    "benchmark"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [ "." ]